--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^4.0.0",
+		"@types/jquery": "^3.5.32",
 		"@types/node": "^22.10.3",
 		"autoprefixer": "^10.4.20",
 		"eslint": "^9.7.0",
@@ -33,9 +34,10 @@
 		"vite": "^5.4.11"
 	},
 	"dependencies": {
-		"@oslojs/jwt": "^0.3.0",
 		"@tailwindcss/container-queries": "^0.1.1",
 		"@tailwindcss/forms": "^0.5.9",
-		"@tailwindcss/typography": "^0.5.15"
+		"@tailwindcss/typography": "^0.5.15",
+		"flyonui": "^1.2.0",
+		"jsonwebtoken": "^9.0.2"
 	}
 }
